--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
 
     <section id="Tomcat">
-        <h1>Instalación y configuración en TOMCAT SERVER</h1>
-        <h2>Versión en Ubuntu</h2>
+        <h1> &nbsp Instalación y configuración en TOMCAT SERVER <br>Versión en Ubuntu</h1>
+        
 
         <ol class="listatom">
             <li>Descarga de Apache Tomcat: <br>
