--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section id="index">
 
         <h1>Instalación de Java <br>en Servidores Web</h1>
-        <p>Aprende a instalar Java EE y otros servicios en los servidores web más usados</p>
+        <p>Aprende a instalar Java EE y otros servicios <br> en los servidores web más usados</p>
         <p> <span>A GUIDE BY MARCO A. BLANCO</span>            </p>
 
     </section>
@@ -35,6 +35,7 @@
 
     <section id="Tomcat">
         <h1> &nbsp Instalación y configuración en TOMCAT SERVER <br>Versión en Ubuntu</h1>
+        <img  class="rotate-scale-down-horizontal imagen-tom" src="./images/Apache_Tomcat_logo.svg.png" alt="">
         
 
         <ol class="listatom">
