--- a/index.html
+++ b/index.html
@@ -39,17 +39,15 @@
         
 
         <ol class="listatom">
-            <li>Descarga de Apache Tomcat: <br>
+            <li><span class="init">Descarga de Apache Tomcat: </span> <br>
 
-                Visita el sitio oficial de Apache Tomcat en https://tomcat.apache.org/. <br>
+                Visita el sitio oficial de Apache Tomcat en <b>https://tomcat.apache.org/</b> <br>
                 En la sección "Download" elige la versión de Tomcat que desees y descarga el archivo binario (archivo
                 .tar.gz).</li>
             <li>
-                Instalación en Ubuntu: <br>
+                 <span class="init">Instalación en Ubuntu: </span><br>
 
-                Abre una terminal. <br>
-                Navega al directorio donde descargaste el archivo Tomcat. <br>
-                Descomprime el archivo con el siguiente comando: <br>
+                Abre una terminal. Navega al directorio donde descargaste el archivo Tomcat y descomprime el archivo con el siguiente comando: <br>
 
                 <span class="code">tar -xvzf apache-tomcat-VERSION.tar.gz </span>
 
